@startuml
class TemplateController {
    + <<override>> GetAttackDirection() : Vector2?
    + <<override>> IsReloadPressed() : bool
    + <<override>> IsJumpPressed() : bool
}
enum State {
    INITAL,
    IDLE,
    SHOOTING,
    RELOADING,
}
AIController <|-- TemplateController
InputController <|-- TemplateController
TemplateController +-- State
@enduml
